force-app/main/default/objects/Brokerage__c/Brokerage__c.object-meta.xml
<CustomObject>
    <label>Brokerage</label>
    <nameField>
        <label>Brokerage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brokerages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>