force-app/main/default/objects/Brokerage__c/fields/AOP_Brokerage__c.field-meta.xml
<CustomField>
    <fullName>AOP_Brokerage__c</fullName>
    <label>AOP Brokerage</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>