force-app/main/default/objects/Brokerage__c/fields/AOP_CP__c.field-meta.xml
<CustomField>
    <fullName>AOP_CP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AOP CP</label>
    <type>Checkbox</type>
</CustomField>