force-app/main/default/objects/Brokerage__c/fields/Brokerage_Summary__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Summary__c</fullName>
    <label>Brokerage Summary</label>
    <referenceTo>Brokerage_Summary__c</referenceTo>
    <relationshipLabel>Brokerages</relationshipLabel>
    <relationshipName>Brokerages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>