force-app/main/default/objects/Brokerage__c/fields/Brokerage_Type__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Type__c</fullName>
    <label>Brokerage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Base Brokerage</fullName>
            </value>
            <value>
                <fullName>Additional Brokerage</fullName>
            </value>
            <value>
                <fullName>Retrofit Brokerage</fullName>
            </value>
            <value>
                <fullName>Cancellation Brokerage</fullName>
            </value>
            <value>
                <fullName>Manual Override Brokerage</fullName>
            </value>
            <value>
                <fullName>Source Change Brokerage Cancellation</fullName>
            </value>
            <value>
                <fullName>Kicker Incentive</fullName>
            </value>
            <value>
                <fullName>AOP Brokerage</fullName>
            </value>
            <value>
                <fullName>AOP Interim Brokerage</fullName>
            </value>
            <value>
                <fullName>AOP Final Brokerage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>