force-app/main/default/objects/Brokerage__c/fields/Brokerage_Unique_No__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Unique_No__c</fullName>
    <displayFormat>BR-{000000}</displayFormat>
    <label>Brokerage Unique No.</label>
    <type>AutoNumber</type>
</CustomField>