force-app/main/default/objects/Brokerage__c/fields/Cancelled_Brokerage__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Brokerage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cancelled Brokerage</label>
    <referenceTo>Brokerage__c</referenceTo>
    <relationshipLabel>Brokerages</relationshipLabel>
    <relationshipName>Brokerages</relationshipName>
    <type>Lookup</type>
</CustomField>