force-app/main/default/objects/Brokerage__c/fields/Cancelled_Brokerage_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Brokerage_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cancelled Brokerage Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>