force-app/main/default/objects/Brokerage__c/fields/Cancelled_Brokerage_percentage__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Brokerage_percentage__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cancelled Brokerage %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>