force-app/main/default/objects/Brokerage__c/fields/Eligible_Slab__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Slab__c</fullName>
    <label>Eligible Slab</label>
    <length>20</length>
    <type>Text</type>
</CustomField>