force-app/main/default/objects/Brokerage__c/fields/Kicker_Incentive__c.field-meta.xml
<CustomField>
    <fullName>Kicker_Incentive__c</fullName>
    <label>Kicker Incentive %</label>
    <precision>18</precision>
    <scale>16</scale>
    <type>Percent</type>
</CustomField>