force-app/main/default/objects/Brokerage__c/fields/Kicker_Incentive_Amount__c.field-meta.xml
<CustomField>
    <fullName>Kicker_Incentive_Amount__c</fullName>
    <label>Kicker Incentive Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>