force-app/main/default/objects/Brokerage__c/fields/Opportunity_AV__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_AV__c</fullName>
    <label>Total Agreement Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>