force-app/main/default/objects/Brokerage__c/fields/Total_Brokerage__c.field-meta.xml
<CustomField>
    <fullName>Total_Brokerage__c</fullName>
    <formula>Brokerage__c -  Cancelled_Brokerage_percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Brokerage %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>