force-app/main/default/objects/Brokerage__c/fields/Total_Brokerage_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Brokerage_Amount__c</fullName>
    <formula>Brokerage_Amount__c -  Cancelled_Brokerage_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Brokerage Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>