force-app/main/default/objects/Brokerage__c/fields/Total_Brokerage_Amount_Text__c.field-meta.xml
<CustomField>
    <fullName>Total_Brokerage_Amount_Text__c</fullName>
    <label>Total Brokerage Amount Text</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>