force-app/main/default/objects/Brokerage__c/fields/Total_Brokerage_Amount_without_Kicker__c.field-meta.xml
<CustomField>
    <fullName>Total_Brokerage_Amount_without_Kicker__c</fullName>
    <formula>Brokerage_Amount__c - Kicker_Incentive_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Brokerage Amount without Kicker</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>