force-app/main/default/objects/Brokerage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Booking__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Brokerage_Scheme__c</columns>
    <columns>Channel_Partner__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Eligible_Slab__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>